--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           text('Laptop Screen', mouseX + 10, mouseY + 10);
         }
 
-        // Phone zone (approx. bottom left)
-        if (mouseX > 100 && mouseX < 300 && mouseY > 800 && mouseY < 950) {
+        // Phone zone (approx. to the right of the laptop screen)
+        if (mouseX > 650 && mouseX < 800 && mouseY > 800 && mouseY < 950) {
           fill(255, 0, 0);
           textSize(20);
           text('Phone', mouseX + 10, mouseY + 10);
