--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
           textSize(20);
           textAlign(LEFT, TOP);
           text('1. Ignore', 20, 100);
-          text('2. Getting off now, I'll be right there', 20, 130);
+          text('2. Getting off now, Ill be right there', 20, 130);
         } else if (phoneMessage === "Text from Anna: You're picking up the beer right? Where are you?") {
           fill(0, 255, 0);
           textSize(20);
           textAlign(LEFT, TOP);
           text('1. Why do I always have to buy beer? You do it!', 20, 100);
-          text('2. I'll be right there, Coors Banquet good with you?', 20, 130);
+          text('2. Ill be right there, Coors Banquet good with you?', 20, 130);
         }
       }
 
